# SendAfrica-cpp-sdk

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  vcpkg.json
cmake/: sendafricaConfig.cmake.in
docs/: api-reference.md  errors.md  getting-started.md  phone-normalization.md  sms-analysis.md  webhooks.md
examples/: CMakeLists.txt  basic_send.cpp
include/sendafrica/: auth.hpp  client.hpp  exceptions.hpp  http_transport.hpp  models.hpp  resources.hpp  sendafrica.hpp  util.hpp
src/: auth.cpp  client.cpp  http_transport.cpp  resources_credits.cpp  resources_payments.cpp  resources_sms.cpp  resources_webhooks.cpp  util.cpp
tests/: CMakeLists.txt  test_local.cpp
